namespace HRYooba.Kinect.Core.Services
{
    public interface IAreaDataFileSaver
    {
        void Save();
    }
}