namespace HRYooba.Kinect.Core.Services
{
    public interface IAreaDataUpdater
    {
        void Update(AreaData areaData);
    }
}