namespace HRYooba.Kinect.Core.Services
{
    public interface IKinectDataUpdater
    {
        void Update(KinectData kinectData);
    }
}